deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: jenkins
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      component: jenkins
  template:
    metadata:
      labels:
        component: jenkins
    spec:
      containers:
        - name: jenkins
          image: jenkins/jenkins:2.212
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: jenkins
              mountPath: /var/jenkins_home
      nodeSelector:
        env: prod            
      volumes:
        - name: jenkins
          persistentVolumeClaim:
            claimName: jenkins
