deploy/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: jenkins
  namespace: devops
spec:
  type: ClusterIP
  selector:
    component: jenkins
  ports:
    - port: 8080
      targetPort: 8080
