deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  
spec:
  tls:
    - hosts:
        - jenkins.stormcloaks.com
      secretName: stormcloaks-com
  rules:
    - host: jenkins.stormcloaks.com
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins
              servicePort: 8080
